--- a/products.html
+++ b/products.html
@@ -81,8 +81,8 @@
   <div id="footer"></div>
 
 <script type="module">
-  import { renderHeader, renderFooter, hydrateHeaderAuth } from "/assets/ui.js";
-  import { supabase } from "/assets/supabase.js";
+  import { renderHeader, renderFooter, hydrateHeaderAuth } from "./assets/ui.js";
+  import { supabase } from "./assets/supabase.js";
 
   document.getElementById("header").innerHTML = renderHeader("products");
   document.getElementById("footer").innerHTML = renderFooter();
@@ -107,7 +107,9 @@
   function setParam(k, v){
     if (v === null || v === undefined || v === "") params.delete(k);
     else params.set(k, String(v));
-    history.replaceState({}, "", url.pathname + "?" + params.toString());
+
+    const qs = params.toString();
+    history.replaceState({}, "", qs ? (url.pathname + "?" + qs) : url.pathname);
   }
 
   function moneyINR(v){
