--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>AhamStree — Handloom Sarees</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="assets/styles.css" />
   <link rel="stylesheet" href="assets/styles.css" />
   <link rel="icon" href="/favicon.ico">
   <link rel="preload" as="image" href="assets/images/banners/hero-1-launch.jpg" imagesrcset="assets/images/banners/hero-1-launch-m.jpg 768w, assets/images/banners/hero-1-launch.jpg 1920w" imagesizes="100vw" />
