--- a/search.html
+++ b/search.html
@@ -95,8 +95,8 @@
   <div id="footer"></div>
 
   <script type="module">
-    import { renderHeader, renderFooter, hydrateHeaderAuth } from "/assets/ui.js";
-    import { searchProducts, renderSearchResults } from "/assets/search.js";
+    import { renderHeader, renderFooter, hydrateHeaderAuth } from "./assets/ui.js";
+    import { searchProducts, renderSearchResults } from "./assets/search.js";
 
     // Render header and footer
     document.getElementById("header").innerHTML = renderHeader();
