--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
   <div id="footer"></div>
 
   <script type="module">
-    import { renderHeader, renderFooter, hydrateHeaderAuth } from "/assets/ui.js";
-    import { hydrateHome } from "/assets/home.js";
+    import { renderHeader, renderFooter, hydrateHeaderAuth } from "./assets/ui.js";
+    import { hydrateHome } from "./assets/home.js";
 
     document.getElementById("header").innerHTML = renderHeader("home");
     hydrateHeaderAuth();
