--- a/about.html
+++ b/about.html
@@ -27,32 +27,24 @@
 <h1>Our Story</h1>
 
 <p>
-Ahamstree was born out of a deep love for India’s timeless handloom traditions
-and the skilled artisans who keep them alive.
+Ahamstree was born out of a deep love for India’s timeless handloom traditions and the skilled artisans who keep them alive.
 </p>
 
 <p>
 At the heart of our journey lies the elegance of <strong>Chanderi sarees</strong> —
-known for their lightweight texture, subtle sheen, and graceful motifs.
-Woven in the historic town of Chanderi, these sarees reflect centuries of
-craftsmanship passed down through generations.
+known for their lightweight texture, subtle sheen, and graceful motifs. Woven in the historic town of Chanderi, these sarees reflect centuries of craftsmanship passed down through generations.
 </p>
 
 <p>
-Every saree at Ahamstree is a celebration of handloom weaving — slow, mindful,
-and rooted in authenticity. We work closely with artisans to preserve traditional
-techniques while presenting designs that resonate with the modern woman.
+Every saree at Ahamstree is a celebration of handloom weaving — slow, mindful, and rooted in authenticity. We work closely with artisans to preserve traditional techniques while presenting designs that resonate with the modern woman.
 </p>
 
 <p>
-From delicate silk blends to breathable cotton handlooms, our collection is
-crafted to tell stories — of culture, patience, and pride. Each weave carries
-the soul of the loom and the hands that created it.
+From delicate silk blends to breathable cotton handlooms, our collection is crafted to tell stories — of culture, patience, and pride. Each weave carries the soul of the loom and the hands that created it.
 </p>
 
 <p>
-At Ahamstree, we believe true luxury lies in authenticity, sustainability, and
-the quiet beauty of handmade fabrics.
+At Ahamstree, we believe true luxury lies in authenticity, sustainability, and the quiet beauty of handmade fabrics.
 </p>
 
       
