--- a/about.html
+++ b/about.html
@@ -1,22 +1,21 @@
-<!doctype html>
-<html>
+﻿<!doctype html>
+<html lang="en">
 <head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-CKQ1EXBHY6"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-CKQ1EXBHY6');
-</script>
   <meta charset="utf-8" />
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CKQ1EXBHY6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-CKQ1EXBHY6');
+  </script>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>About — AhamStree</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="assets/styles.css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
@@ -24,30 +23,29 @@
 
   <div class="container">
     <div class="card" style="padding:22px;border-radius:18px;">
-<h1>Our Story</h1>
+      <h1>Our Story</h1>
 
-<p>
-Ahamstree was born out of a deep love for India’s timeless handloom traditions and the skilled artisans who keep them alive.
-</p>
+      <p>
+        Ahamstree was born out of a deep love for India’s timeless handloom traditions and the skilled artisans who keep them alive.
+      </p>
 
-<p>
-At the heart of our journey lies the elegance of <strong>Chanderi sarees</strong> —
-known for their lightweight texture, subtle sheen, and graceful motifs. Woven in the historic town of Chanderi, these sarees reflect centuries of craftsmanship passed down through generations.
-</p>
+      <p>
+        At the heart of our journey lies the elegance of <strong>Chanderi sarees</strong> —
+        known for their lightweight texture, subtle sheen, and graceful motifs. Woven in the historic town of Chanderi, these sarees reflect centuries of craftsmanship passed down through generations.
+      </p>
 
-<p>
-Every saree at Ahamstree is a celebration of handloom weaving — slow, mindful, and rooted in authenticity. We work closely with artisans to preserve traditional techniques while presenting designs that resonate with the modern woman.
-</p>
+      <p>
+        Every saree at Ahamstree is a celebration of handloom weaving — slow, mindful, and rooted in authenticity. We work closely with artisans to preserve traditional techniques while presenting designs that resonate with the modern woman.
+      </p>
 
-<p>
-From delicate silk blends to breathable cotton handlooms, our collection is crafted to tell stories — of culture, patience, and pride. Each weave carries the soul of the loom and the hands that created it.
-</p>
+      <p>
+        From delicate silk blends to breathable cotton handlooms, our collection is crafted to tell stories — of culture, patience, and pride. Each weave carries the soul of the loom and the hands that created it.
+      </p>
 
-<p>
-At Ahamstree, we believe true luxury lies in authenticity, sustainability, and the quiet beauty of handmade fabrics.
-</p>
+      <p>
+        At Ahamstree, we believe true luxury lies in authenticity, sustainability, and the quiet beauty of handmade fabrics.
+      </p>
 
-      
       <div style="margin-top:14px;display:flex;gap:10px;flex-wrap:wrap;">
         <a class="btn" href="products.html">Browse Sarees</a>
         <a class="btn ghost" href="cart.html">Go to Cart</a>
